--- a/Source/MapEditor/mainwindow.ui
+++ b/Source/MapEditor/mainwindow.ui
@@ -24,41 +24,42 @@
     <bool>true</bool>
    </property>
    <layout class="QGridLayout" name="gridLayout">
-    <item row="0" column="0">
+    <item row="3" column="0">
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
-       <widget class="QPushButton" name="LoadMap_Btn">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
+       <widget class="QPushButton" name="CreateMap_Btn">
+        <property name="text">
+         <string>Create map</string>
         </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="LoadMap_Btn">
         <property name="text">
          <string>Load map</string>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="SaveMap_Btn">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
+       <widget class="QPushButton" name="pushButton_3">
         <property name="text">
-         <string>Save Map</string>
+         <string>PushButton</string>
         </property>
        </widget>
       </item>
      </layout>
     </item>
-    <item row="2" column="0">
+    <item row="0" column="0">
      <widget class="QTreeWidget" name="treeWidget">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
       <property name="maximumSize">
        <size>
-        <width>320</width>
+        <width>16777215</width>
         <height>16777215</height>
        </size>
       </property>
@@ -69,8 +70,8 @@
       </column>
      </widget>
     </item>
-    <item row="2" column="1">
-     <widget class="QWidget" name="widget" native="true"/>
+    <item row="0" column="1">
+     <widget class="QGraphicsView" name="graphicsView"/>
     </item>
    </layout>
   </widget>
