* RWY_DIR and AIRCRAFT_DIRECTION have been joint into a single enum. * Game.c: new prototypes GameGetParkingDirection() and GameGetRunwayDirection(). * Slight optimizations into GameRenderLevel(). * Added some comment headers into Gfx.c.

--- a/Source/MapEditor/mainwindow.ui
+++ b/Source/MapEditor/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>920</width>
-    <height>582</height>
+    <height>605</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -24,7 +24,38 @@
     <bool>true</bool>
    </property>
    <layout class="QGridLayout" name="gridLayout">
-    <item row="3" column="0">
+    <item row="1" column="0">
+     <layout class="QHBoxLayout" name="horizontalLayout_2">
+      <item>
+       <widget class="QCheckBox" name="showNumbers_Checkbox">
+        <property name="text">
+         <string>Show numbers on map</string>
+        </property>
+        <property name="checked">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QCheckBox" name="mirror_CheckBox">
+        <property name="text">
+         <string>Mirror tile</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </item>
+    <item row="0" column="2">
+     <widget class="QGraphicsView" name="graphicsView">
+      <property name="minimumSize">
+       <size>
+        <width>640</width>
+        <height>480</height>
+       </size>
+      </property>
+     </widget>
+    </item>
+    <item row="4" column="0">
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
        <widget class="QPushButton" name="CreateMap_Btn">
@@ -49,16 +80,6 @@
       </item>
      </layout>
     </item>
-    <item row="0" column="2">
-     <widget class="QGraphicsView" name="graphicsView">
-      <property name="minimumSize">
-       <size>
-        <width>640</width>
-        <height>480</height>
-       </size>
-      </property>
-     </widget>
-    </item>
     <item row="0" column="0">
      <widget class="QListWidget" name="listWidget">
       <property name="maximumSize">
@@ -66,13 +87,6 @@
         <width>256</width>
         <height>16777215</height>
        </size>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="0">
-     <widget class="QCheckBox" name="mirror_CheckBox">
-      <property name="text">
-       <string>Mirror tile</string>
       </property>
      </widget>
     </item>
